# Learning_langchain

./: .gitignore  README.md  pyproject.toml
l_lancgain/: chatbot_wtih_search.py
